service-mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kitchensink-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kitchensink
spec:
  hosts:
  - "*"
  gateways:
  - kitchensink-gateway
  http:
  - match:
    - uri:
        exact: /rest/members
    - uri:
        exact: /
    - uri:
        exact: /index.jsf
    - uri:
        prefix: /rest/members
    route:
    - destination:
        host: eap-app
        port:
          number: 8080
